# quicktype-mcp

./: .gitignore  README.md  cli.py  examples.py  main.py  mcp.json  pyproject.toml  windsurf_config.json
