requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quicktype-mcp"
version = "0.1.0"
description = "An MCP (Model Context Protocol) server specifically designed for generating Dart models from JSON. This tool simplifies the process of creating type-safe Dart models for Flutter and Dart applications."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.12.3",
]


[project.urls]
Homepage = "https://github.com/AscEmon/quicktype-mcp"
Issues = "https://github.com/AscEmon/quicktype-mcp/issues"